Bug 276405 - Status/account tooltips show accelerator character (&)
Summary: Status/account tooltips show accelerator character (&)
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-24 19:40 UTC by Elias Probst
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the & in the tooltip (19.07 KB, image/png)
2011-06-24 19:40 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2011-06-24 19:40:57 UTC
Created attachment 61304 [details]
Screenshot showing the & in the tooltip

Version:           git-latest (using KDE 4.6.4) 
OS:                Linux

When hovering the status/account icons in the top menu bar of the contact list, the tooltips show a message like this:

elias.probst@googlemail.com
&Available

The & shouldn't be shown.
See also attached screenshot.

Reproducible: Always




OS: Linux (x86_64) release 2.6.38-gentoo-r6
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Paolo Capriotti 2011-07-17 20:32:10 UTC
Git commit d557db3e4585058aa0059e4fc887562a10a9afa7 by Paolo Capriotti.
Committed on 17/07/2011 at 21:35.
Pushed by capriotti into branch 'master'.

Remove accelerators from presence action text before updating tooltip.

BUG: 276405
REVIEW: 101982

M  +1    -1    account-button.cpp

http://commits.kde.org/telepathy-contact-list/d557db3e4585058aa0059e4fc887562a10a9afa7