Remove accelerators from presence action text before updating tooltip.

BUG: 276405
REVIEW: 101982